[package]
name = "kvs"
version = "0.1.0"
authors = ["Guo Zhi Hao <335247945@qq.com>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.4.0"
rand = "0.8.5"

[dependencies]
clap = { version = "3.2.21", features = ["derive"]}
stderr = "0.8.0"
thiserror = "1.0.35"
serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
failure = { version = "0.1.8", features = ["derive"]}
failure_derive = "0.1.8"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = true # test the lib

[[bin]]
name = "kvs" # the bin name
test = false # not do the test

[[bin]]
name = "kvs-server"
test = false

[[bin]]
name = "kvs-client"
test = false